# SoftManager-Password-Changer

./: README.md  main.py  main.spec  pyproject.toml
src/: __init__.py
src/automation/: __init__.py
src/automation/client/: __init__.py  api_client.py
src/automation/core/: __init__.py  config.py  constants.py  encryption.py  exceptions.py
src/automation/managers/: __init__.py  password_manager.py  user_manager.py
src/ui/: gui.py
