[project]
name = "softmanager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "cryptography>=45.0.3",
    "python-dotenv>=1.0.0",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.14.1",
]
